--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Mano svetaine</</title>
 </head>
 <body>
- <h1>Sveiki Labas Zuiki</h1>
-  <p>Svetaine kuriama</p>
+ <h1>Labas, Mamayte</h1>
+  <p>Svetaine kuriama, tau, myliu</p>
 </body>
   <html>
      
