--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Mano svetaine</</title>
 </head>
 <body>
- <h1>Labas, Mamayte</h1>
+ <h1>Labas, Mamyte</h1>
   <p>Svetaine kuriama, tau, myliu</p>
 </body>
   <html>
