--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
 <header>
     <nav>
-        <h2>Kūdikių aha SPA</h2>
+        <h2>Kūdikių SPA</h2>
         <ul>
             <li><a href="#services">Procedūros</a></li>
             <li><a href="#about">Apie SPA</a></li>
