--- a/index.html
+++ b/index.html
@@ -131,7 +131,17 @@
 </header>
 
 <section class="hero">
-    <div>
+    <section class="hero">
+  <video class="hero-video" autoplay muted loop playsinline>
+    <source src="184978-874460319_medium.mp4" type="video/mp4">
+  </video>
+
+  <div class="hero-content">
+    <h1>Saugios ir malonios vandens procedūros mažyliams</h1>
+    <p>Kūdikių hidroterapija, plukdymas ir masažas vandenyje su profesionalia priežiūra</p>
+    <a href="#contact" class="btn">Užsiregistruoti</a>
+  </div>
+</section>
         <h1>Saugios ir malonios vandens procedūros mažyliams</h1>
         <p>Kūdikių hidroterapija, plukdymas ir masažas vandenyje su profesionalia priežiūra</p>
         <a href="#contact" class="btn">Užsiregistruoti</a>
