--- a/index.html
+++ b/index.html
@@ -209,3 +209,48 @@
 
 </body>
 </html>
+.hero {
+  position: relative;
+  height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: white;
+  overflow: hidden;
+}
+
+.hero-video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transform: translate(-50%, -50%);
+  z-index: -2; /* video fone */
+}
+
+.hero::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.35); /* tamsinimas, kad tekstas matytųsi */
+  z-index: -1;
+}
+
+.hero-content {
+  position: relative;
+  z-index: 1; /* virš video */
+}
+
+.btn {
+  padding: 12px 25px;
+  background: #2a9df4;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  display: inline-block;
+  margin-top: 15px;
+}
