--- a/index.html
+++ b/index.html
@@ -1,121 +1,171 @@
 <!DOCTYPE html>
 <html lang="lt">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kūdikių SPA – Hidroterapija naujagimiams</title>
-    <meta name="description" content="Profesionalus kūdikių SPA – hidroterapijos, mankštos ir vandeninės procedūros mažyliams su patyrusiais specialistais.">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Kūdikių SPA – Hidroterapija naujagimiams</title>
+<meta name="description" content="Profesionalus kūdikių SPA – hidroterapijos, mankštos ir vandeninės procedūros mažyliams su patyrusiais specialistais.">
 
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Arial, sans-serif;
-        }
-        body {
-            line-height: 1.6;
-            color: #333;
-        }
-        header {
-            background: #1c5d99;
-            color: white;
-            padding: 15px 0;
-            position: fixed;
-            width: 100%;
-            top: 0;
-            z-index: 100;
-        }
-        nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            width: 90%;
-            margin: auto;
-        }
-        nav ul {
-            list-style: none;
-            display: flex;
-        }
-        nav ul li {
-            margin-left: 20px;
-        }
-        nav ul li a {
-            color: white;
-            text-decoration: none;
-        }
-        .hero {
-            background: url('https://images.unsplash.com/photo-1604436466190-792269166e1b') no-repeat center center/cover;
-            height: 90vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: white;
-            text-align: center;
-            padding: 20px;
-        }
-        .hero h1 {
-            font-size: 48px;
-            margin-bottom: 10px;
-        }
-        .btn {
-            padding: 12px 25px;
-            background: #2a9df4;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            display: inline-block;
-            margin-top: 15px;
-        }
-        section {
-            padding: 80px 20px;
-            width: 90%;
-            margin: auto;
-        }
-        .services {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-        }
-        .service-box {
-            flex: 1;
-            min-width: 250px;
-            background: #f9f9f9;
-            padding: 25px;
-            border-radius: 8px;
-        }
-        footer {
-            background: #1c5d99;
-            color: white;
-            text-align: center;
-            padding: 15px;
-        }
-        input, textarea {
-            width: 100%;
-            padding: 10px;
-            margin-top: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-        button {
-            margin-top: 10px;
-            padding: 10px 20px;
-            background: #2a9df4;
-            color: white;
-            border: none;
-            cursor: pointer;
-            border-radius: 5px;
-        }
-        @media(max-width:768px){
-            .services {
-                flex-direction: column;
-            }
-            .hero h1 {
-                font-size: 32px;
-            }
-        }
-    </style>
+<style>
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
+}
+
+body {
+    line-height: 1.6;
+    color: #333;
+}
+
+/* HEADER */
+header {
+    background: #1c5d99;
+    color: white;
+    padding: 15px 0;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 100;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
+    margin: auto;
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+}
+
+nav ul li {
+    margin-left: 20px;
+}
+
+nav ul li a {
+    color: white;
+    text-decoration: none;
+}
+
+/* HERO SU VIDEO */
+.hero {
+    position: relative;
+    height: 100vh;
+    width: 100%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: white;
+    margin-top: 70px; /* kad neuždengtų header */
+}
+
+.hero-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 1;
+}
+
+/* Tamsus overlay geresniam teksto matomumui */
+.hero::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.4);
+    z-index: 2;
+}
+
+.hero-content {
+    position: relative;
+    z-index: 3;
+    padding: 20px;
+}
+
+.hero h1 {
+    font-size: 48px;
+    margin-bottom: 10px;
+}
+
+.btn {
+    padding: 12px 25px;
+    background: #2a9df4;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    display: inline-block;
+    margin-top: 15px;
+}
+
+/* SECTION */
+section {
+    padding: 80px 20px;
+    width: 90%;
+    margin: auto;
+}
+
+.services {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.service-box {
+    flex: 1;
+    min-width: 250px;
+    background: #f9f9f9;
+    padding: 25px;
+    border-radius: 8px;
+}
+
+footer {
+    background: #1c5d99;
+    color: white;
+    text-align: center;
+    padding: 15px;
+}
+
+input, textarea {
+    width: 100%;
+    padding: 10px;
+    margin-top: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+button {
+    margin-top: 10px;
+    padding: 10px 20px;
+    background: #2a9df4;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+@media(max-width:768px){
+    .services {
+        flex-direction: column;
+    }
+    .hero h1 {
+        font-size: 32px;
+    }
+}
+</style>
 </head>
+
 <body>
 
 <header>
@@ -131,17 +181,11 @@
 </header>
 
 <section class="hero">
-    <section class="hero">
-  <video class="hero-video" autoplay muted loop playsinline>
-    <source src="184978-874460319_medium.mp4" type="video/mp4">
-  </video>
+    <video class="hero-video" autoplay muted loop playsinline>
+        <source src="184978-874460319_medium.mp4" type="video/mp4">
+    </video>
 
-  <div class="hero-content">
-    <h1>Saugios ir malonios vandens procedūros mažyliams</h1>
-    <p>Kūdikių hidroterapija, plukdymas ir masažas vandenyje su profesionalia priežiūra</p>
-    <a href="#contact" class="btn">Užsiregistruoti</a>
-  </div>
-</section>
+    <div class="hero-content">
         <h1>Saugios ir malonios vandens procedūros mažyliams</h1>
         <p>Kūdikių hidroterapija, plukdymas ir masažas vandenyje su profesionalia priežiūra</p>
         <a href="#contact" class="btn">Užsiregistruoti</a>
@@ -153,22 +197,22 @@
     <div class="services">
         <div class="service-box">
             <h3>Hidroterapija</h3>
-            <p>Švelni vandens terapija, kurios metu kūdikis plukdomas šiltame vandenyje, gerinamas raumenų tonusas ir koordinacija.</p>
+            <p>Švelni vandens terapija, kurios metu kūdikis plukdomas šiltame vandenyje.</p>
         </div>
         <div class="service-box">
             <h3>Kūdikių mankšta vandenyje</h3>
-            <p>Individualiai pritaikyta kūdikių mankšta su kvalifikuotų specialistų priežiūra, skatinanti natūralų vystymąsi.</p>
+            <p>Individualiai pritaikyta mankšta su specialistų priežiūra.</p>
         </div>
         <div class="service-box">
             <h3>Masažas baseine</h3>
-            <p>Jaukūs ir raminantys judesiai šiltame baseino vandenyje mažina stresą ir gerina kraujotaką.</p>
+            <p>Raminantys judesiai šiltame vandenyje mažina stresą.</p>
         </div>
     </div>
 </section>
 
 <section id="about">
     <h2>Apie mūsų SPA</h2>
-    <p>Mūsų kūdikių SPA yra saugi vieta, kur mažyliai kartu su savo tėveliais gali patirti švelnias vandenines procedūras specialiai pritaikytame baseine. Vanduo palaiko natūralias kūdikio judėjimo reakcijas, o procedūros padeda nuraminti kūdikį, pagerinti miego ritmą ir stiprinti ryšį tarp mamos ir vaiko. Mes dirbame laikydamiesi aukštų higienos standartų ir visada užtikriname saugią aplinką.</p>
+    <p>Mūsų kūdikių SPA yra saugi vieta, kur mažyliai kartu su tėveliais gali patirti švelnias vandens procedūras specialiai pritaikytame baseine.</p>
 </section>
 
 <section id="pricing">
@@ -176,15 +220,15 @@
     <div class="services">
         <div class="service-box">
             <h3>Hidroterapijos užsiėmimas</h3>
-            <p>Nuo 30 € už sesiją</p>
+            <p>Nuo 30 €</p>
         </div>
         <div class="service-box">
             <h3>Individuali mankšta</h3>
-            <p>Nuo 35 € už užsiėmimą</p>
+            <p>Nuo 35 €</p>
         </div>
         <div class="service-box">
             <h3>Abonementai</h3>
-            <p>5 kartų pakuotė nuo 130 €</p>
+            <p>5 kartai nuo 130 €</p>
         </div>
     </div>
 </section>
@@ -193,7 +237,6 @@
     <h2>Kontaktai</h2>
     <p>Telefonas: +370 696 17171</p>
     <p>El. paštas: kudikiu.spa@gmail.com</p>
-    <p>Svetainė: <a href="https://kudikiuspa.lt">kudikiuspa.lt</a></p>
 
     <form>
         <input type="text" placeholder="Jūsų vardas" required>
@@ -206,24 +249,6 @@
 <footer>
     <p>© 2026 Kūdikių SPA. Visos teisės saugomos</p>
 </footer>
-.hero {
-  position: relative;
-  width: 100%;
-  height: 100vh; /* per visą ekrano aukštį */
-  overflow: hidden;
-}
 
-.hero-video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover; /* kad užpildytų visą plotą */
-}
-
-.hero-content {
-  position: relative;
-  z-index: 2;
-  color: white;
-}
+</body>
+</html>
