--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ input, textarea {
 button {
     margin-top: 10px;
     padding: 10px 20px;
-    background: #2a9df4;
+    background: #1c5d99;
     color: white;
     border: none;
     cursor: pointer;
